fixed login on mobile

--- a/app-frontend/src/less/captain.css
+++ b/app-frontend/src/less/captain.css
@@ -4,7 +4,7 @@
 
 .full-page-content {
     align-items: center;
-    padding-right: 200px;
+    margin-left: -150px;
     margin-top: 100px;
 }
 
